updates to jupyter notebook

--- a/deep_learning_model_creation/Identifying Tasmanian Tigers using Convolutional Neural Networks.ipynb
+++ b/deep_learning_model_creation/Identifying Tasmanian Tigers using Convolutional Neural Networks.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8eed9609",
    "metadata": {},
@@ -9,15 +10,17 @@
     "\n",
     "## Introduction\n",
     "\n",
-    "In this Jupyter notebook, I present a deep learning project in which I have developed a Convolutional Neural Network (CNN) to identify the probability of an image containing a Tasmanian Tiger or not. Tasmanian Tigers, also known as thylacines, are extinct carnivorous marsupials that once lived in the wilds of Tasmania, Australia. Despite being declared extinct in the 20th century, there have been many alleged sightings of Tasmanian Tigers, and identifying them from images can help further research and conservation efforts.\n",
+    "In this Jupyter notebook, I present a deep learning project in which I have developed a Convolutional Neural Network (CNN) to identify the probability of an image containing a Tasmanian Tiger. Tasmanian Tigers, also known as Thylacines, are extinct carnivorous marsupials that once lived in the wilds of Tasmania, Australia. Despite being declared extinct in the 20th century, there have been many alleged sightings of Tasmanian Tigers, and identifying them from images can help further research and conservation efforts.\n",
     "\n",
     "The project involved building a CNN using the TensorFlow and Keras libraries, and training the model on a large dataset of images containing Tasmanian Tigers and other animals that could be confused with them, such as dogs and foxes. The trained model achieved a high accuracy rate and was able to accurately identify Tasmanian Tigers from images with a high level of precision.\n",
     "\n",
     "## Methodology\n",
     "\n",
-    "In this notebook, I provide a step-by-step walkthrough of the project, including some data preprocessing, model building, and training. I also provide a detailed analysis of the results and evaluate the performance of the model. This project is an exciting example of how deep learning techniques can be used to tackle complex problems and could potentially contribute to further research and conservation efforts related to Tasmanian Tigers.\n",
+    "In this notebook, I provide a step-by-step walkthrough of the project, including some data preprocessing, model building, and training. \n",
     "\n",
-    "While not all the pre-processing steps are included in this repository, I have included the main functions used for image collection and pre-processing in the directory `image_collection_helper_functions`. These functions helped me to efficiently collect and process a large amount of data and prepare it for use in the training of the CNN model.\n",
+    "This project is an exciting example of how deep learning techniques can be used to tackle complex problems and could potentially contribute to further research and conservation efforts related to Tasmanian Tigers.\n",
+    "\n",
+    "While not all the pre-processing steps are included in this repository, I have included the main functions used for image collection and pre-processing in the directory `image_collection`. These functions helped me to efficiently collect and process a large amount of image data to prepare it for use in the training of the CNN model.\n",
     "\n",
     "For this project, I collected a large dataset of images containing Tasmanian Tigers using a combination of web scraping and computer vision techniques. I used the Python CV (Computer Vision) library to extract screenshots from old footage of the Tasmanian Tiger and collected images from Google Images to build a comprehensive dataset.\n",
     "\n",
@@ -27,6 +30,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "357d3ef2",
    "metadata": {},
@@ -43,6 +47,7 @@
     "- Changes in learning rates\n",
     "- Varying numbers of training images\n",
     "- Varying data augmentation strategies\n",
+    "- Early stopping\n",
     "\n",
     "Each of these variations was tested to identify the combination of factors that produced the highest accuracy on both validation loss and validation accuracy metrics. Additionally, the model's ability to correctly classify random custom images that it had not seen before was also tested to ensure that it was able to generalize well.\n",
     "\n",
@@ -50,10 +55,10 @@
     "\n",
     "- The use of transfer learning\n",
     "- Using the EfficientNetB0 model\n",
-    "- Training for a total of 11 epochs\n",
+    "- Training for a total of 13 epochs (decided by early stopping)\n",
     "- The use of L1 regularization with a factor of 0.001\n",
     "- An Adam optimiser learning rate of 0.001\n",
-    "- A dataset of ~ 42,000 training images\n",
+    "- A dataset of ~ 174K training images (Tasmanian Tiger and Not Tasmanian Tiger combined)\n",
     "- The use of data augmentation strategies including rotation, zooming, horizontal flipping, and width/height shift\n",
     "\n",
     "\n",
@@ -147,20 +152,21 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7e22821e",
    "metadata": {},
    "source": [
     "# Image Pre-Processing\n",
     "\n",
-    "As this project focuses on identifying whether an image contains a Tasmanian Tiger or not, it is a binary classification problem. Binary classification problems require the model to assign a label to each input image from one of two possible classes. Therefore, in this project, only two directories are required for the input data, one for images containing Tasmanian Tigers and another for images not containing them.\n",
+    "As this project focuses on identifying whether an image contains a Tasmanian Tiger or not, it becomes a binary classification problem. Binary classification problems require the model to assign a label to each input image from one of two possible classes. Therefore, in this project, only two directories are required for the input data, one for images containing Tasmanian Tigers and another for images not containing them.\n",
     "\n",
     "To organize the data, it is common practice to split the data into training, validation, and test sets. Each set is used for a specific purpose in the training and evaluation of the model. However, regardless of the split, there should be only two directories, one for Tasmanian Tiger images and one for non-Tasmanian Tiger images, in all three sets.\n",
     "\n",
     "I used a Python Library called \"splitfolders\" to split into training, validation and test sets.\n",
     "\n",
     "`import splitfolders\n",
-    "splitfolders.ratio('image_folder', output=\"output\", seed=1337, ratio=(.5, 0.45, 0.05))`"
+    "splitfolders.ratio('image_folder', output=\"output\", seed=1337, ratio=(.8, 0.175, 0.025))`"
    ]
   },
   {
@@ -246,17 +252,20 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3c89ce8a",
    "metadata": {},
    "source": [
     "# Building the Model\n",
     "\n",
-    "This TensorFlow model is based on the EfficientNetB0 architecture and uses transfer learning to recognize Tasmanian tigers in images. The base model is frozen (i.e., its weights are not updated during training) so that its pre-learned patterns remain intact. The input to the model is an image tensor with shape (224, 224, 3). The input tensor is first passed through a data augmentation layer to create additional training examples.\n",
+    "This code creates a base model using the EfficientNetB0 architecture from the tf.keras.applications module, freezes the weights in the base model to retain pre-learned patterns, and sets up the inputs to the model.\n",
     "\n",
-    "The output of the base model is then passed through a convolutional layer with 128 filters and 3x3 kernel size with an L1 kernel regularization term of 0.001. The purpose of this layer is to add additional features to the model to better fit the training data. The output of this layer is then globally average pooled, reducing the spatial dimensions of the tensor and aggregating the most important features into a single feature vector.\n",
+    "The output of the data augmentation step is passed to the base model, and the resulting output is processed by a convolutional layer with 128 filters, 3x3 kernel size, and ReLU activation. This layer also includes a L1 regularization penalty with a regularization strength of 0.001.\n",
     "\n",
-    "Finally, the feature vector is passed through a fully connected dense layer with a sigmoid activation function to produce a probability score for the presence of a Tasmanian tiger in the input image. The model is then created by combining the input and output layers into a single TensorFlow model object. Overall, this model represents a powerful and flexible approach to binary image classification that leverages transfer learning and efficient data augmentation."
+    "The output of the regularization layer is then passed through a global average pooling layer to reduce the number of computations and aggregate the most important information from the base model's output.\n",
+    "\n",
+    "Finally, the outputs of the global average pooling layer are passed through a dense layer with a single neuron and sigmoid activation function, producing a binary classification output."
    ]
   },
   {
@@ -393,6 +402,21 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "ff916a75",
+   "metadata": {},
+   "source": [
+    "# Results\n",
+    "\n",
+    "Ideally, we want both the training loss and validation loss to decrease with each epoch. This indicates that the model is learning to generalize well to new data and is becoming better at making accurate predictions.\n",
+    "\n",
+    "It is generally a good sign if the validation loss is lower than the training loss. Because this means that the model is not overfitting to the training data, and is able to generalize well to new data. Overfitting occurs when a model becomes too complex, and starts to memorize the training data rather than learning to recognize general patterns.\n",
+    "\n",
+    "Similarly, it is also a good sign if the validation accuracy is higher than the training accuracy. This indicates that the model is not overfitting to the training data, and is able to generalize well to new data. A high validation accuracy means that the model is making accurate predictions on new data, which is what we ultimately care about in machine learning."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "51cff7f5",
@@ -414,11 +438,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4edfae21",
    "metadata": {},
    "source": [
-    "# Save the model"
+    "# Save the model\n",
+    "\n",
+    "The model is saved so it can be used for the app. This looks like it is the third version, but this is the third version after user testing. It is more like the 25th version! "
    ]
   },
   {
@@ -432,11 +459,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "cbfebf24",
    "metadata": {},
    "source": [
-    "# Testing on custom images not seen during training, validation or test"
+    "# Testing on custom images not seen during training, validation or test\n",
+    "\n",
+    "Testing custom images on a deep learning model is important because it helps to evaluate how well the model generalizes to new data. When developing a deep learning model, it is common to train it on a large dataset that is similar to the target task. However, it is important to note that this dataset may not represent all the possible variations and combinations of features that could occur in real-world scenarios. Therefore, testing custom images that the model has not seen before can help to identify potential issues with the model's performance, such as overfitting to the training data."
    ]
   },
   {
@@ -670,14 +700,6 @@
     "pred_and_plot(model=model,\n",
     "              filename=\"random_tests/interesting2.jpg\")\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "240d659b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
